Bug 439793 - Movies not visible on Apple iPod Touch pages. Patch by Philippe Wittenbergh <phiw@l-c-n.com>, r=me, sr=smfr, a/Cm1.6.2=me

--- a/camino/resources/application/ad_blocking.css
+++ b/camino/resources/application/ad_blocking.css
@@ -537,6 +537,7 @@ img[src*="/ad/"] {display: inline !important }
 
 @-moz-document domain(apple.com) {
 img[src*="/ads/"] {display: inline !important }
+div[id="ad"] {display:block !important;}
 }
 
 @-moz-document domain(nasdaq.com) {
